--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 header {
-    height: 15rem;
+    height: 10rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,7 +43,7 @@ main {
 
     height: clamp(35rem, 60%, 70rem);
     width: clamp(30rem, 80%, 80rem);
-    margin: 0 auto 3rem;
+    margin: 1rem auto 4rem;
 
     border-radius: 6px;
     background: var(--bg-main);
@@ -264,6 +264,9 @@ footer a span:hover{
 
 
 @media (min-width: 700px){
+    header {
+        height: 15rem;
+    }
      main{
         margin: 4rem auto;
     }
