--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --bg-main: hsl(var(--hue), 50%, 80%);
     --fc-primary: hsl(var(--hue), 0%, 100%);
     --fc-secondary-dark: hsl(var(--hue), 100%, 11%);
+    --icon-color: hsl(var(--hue), 95%, 8%);
 
     --button-color: rgba(255, 255, 255, 0);
 }
@@ -21,6 +22,8 @@ body {
     font-size: 1.6rem;
     height: 100vh;
     background: var(--bg-primary);
+    overflow: auto;
+    position: relative;
 }
 
 header {
@@ -35,15 +38,55 @@ header h1 {
     font-size:  clamp(2rem, 2rem + 5vw, 15rem);
 }
 
+.bgIntroduction{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+}
+
+.introduction{
+    background: rgb(220, 220, 220);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 6px;
+
+    height: clamp(45rem, 60%, 40rem);
+    width: clamp(30rem, 80%, 80rem);
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    margin: auto;
+    animation: downtop 1000ms 200ms backwards;
+}
+
+.introduction h2{
+    font-size: 1.5em;
+}
+.introduction p{
+    font-size: 1em;
+}
+
 main {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
 
-    height: clamp(35rem, 60%, 70rem);
-    width: clamp(30rem, 80%, 80rem);
-    margin: 1rem auto 4rem;
+    height: clamp(30rem, 60%, 70rem);
+    width: clamp(31.5rem, 80%, 80rem);
+    margin: 0 auto 2rem;
 
     border-radius: 6px;
     background: var(--bg-main);
@@ -51,7 +94,7 @@ main {
 
     text-align: center;
     font-size: clamp(2rem, 3rem + 1vw, 5rem);
-    line-height: clamp(4rem, 5rem + 1vw, 6rem);
+    line-height: clamp(2rem, 4rem + 1vw, 6rem);
 
     box-shadow: 0px 0px 50px 10px var(--fc-secondary-dark);
     transition: 200ms;
@@ -76,12 +119,12 @@ main h2{
 }
 
 .mode{
-    height: 70%;
+    height: clamp(15rem, 17rem + 1vw, 20rem);
     width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-
+    margin: clamp(2rem, 2.5rem + 1vw, 5rem) 0;
 }
 
 .miniCircle{
@@ -89,6 +132,24 @@ main h2{
     border: 5px solid rgb(136, 23, 23);
     width: 4rem;
     height: 4rem;
+    border-radius: 100%;
+}
+
+.TextMiniCircle{
+    display: flex;
+}
+.GreenMiniCircle{
+    background-color: rgb(0, 255, 21);
+    border: 4px solid rgb(23, 136, 29);
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+}
+.RedMiniCircle{
+    background-color: red;
+    border: 5px solid rgb(136, 23, 23);
+    width: 3rem;
+    height: 3rem;
     border-radius: 100%;
 }
 
@@ -108,7 +169,7 @@ main h2{
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.4);
 
-    border-radius: 1rem;
+    border-radius: 3rem;
     width: 15rem;
     height: 15rem;
 
@@ -144,8 +205,8 @@ main h2{
 
 .gameWithThreeCircles{
     display: flex;
-    flex-direction: column;
-    gap: 3rem;
+    gap: 0.5rem;
+    
 }
 
 .gameWithThreeCircles .circle{
@@ -173,9 +234,8 @@ button {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 300px;
-    height: 500px;
-    gap: 20px;
+    width: 30rem;
+    gap: 2rem;
 }
 
 #threeSecondsToStartOver{
@@ -193,20 +253,67 @@ button {
     margin-top: 3rem;
 }
 
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#icons{
+    width: clamp(30rem, 80%, 80rem);;
+    text-align: center;
+    position: relative;
+}
+
+ion-icon{
+    font-size: clamp(40px, 50px + 1vw, 700px);
+    color: var(--icon-color);
+    transition: 150ms;
+    border-radius: 20px;
+}
+
+ion-icon:hover{
+    color: var(--fc-secondary-dark);  
+}
+
+.back{
+    position: absolute;
+    left: 2rem;
+}
+
+.colorPalette{
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.palette{
+    border-radius: 100%;
+}
+
+.circleColors{
+    background-color: var(--bg-main);
+}
+
 .bgColor{
-    width: 100%;
-    height: 5rem;
+    width: 25rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: var(--bg-main);
+    border-radius: 20px;
+    animation-name: righttoleft;
+    animation-duration: 30ms;
 }
+
 
 .color{
     width: 5rem;
     height: 5rem;
     border-radius: 100%;
 }
-
 #blue{
     background: rgb(0, 183, 255);
     border: 5px solid rgb(0, 85, 119);
@@ -215,7 +322,6 @@ button {
 #blue:hover{
     box-shadow: 0px 0px 10px 1px rgba(0, 85, 119, 0.8);
 }
-
 #green{
     background: rgb(0, 255, 0);
     border: 5px solid rgb(2, 113, 2);
@@ -224,7 +330,6 @@ button {
 #green:hover{
     box-shadow: 0px 0px 10px 1px rgb(2, 113, 2, 0.8);
 }
-
 #red{
     background: rgb(255, 76, 76);
     border: 5px solid rgb(141, 46, 46);
@@ -233,7 +338,6 @@ button {
 #red:hover{
     box-shadow: 0px 0px 10px 1px rgb(141, 46, 46, 0.8);
 }
-
 #purple{
     background: rgb(128, 0, 255);
     border: 5px solid rgb(72, 1, 142);
@@ -243,37 +347,39 @@ button {
     box-shadow: 0px 0px 10px 1px rgb(72, 1, 142, 0.8);
 }
 
-footer{
-    text-align: center;
+@keyframes righttoleft {
+    0%{
+        opacity: 0;
+        transform: translatex(15px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
-footer a{
-    color: var(--fc-primary);
-    text-decoration: none;
-    font-size: clamp(1.6rem, 2rem + 1vw, 3rem);
+@keyframes downtop {
+    0% {
+        opacity: 0;
+        transform: translateY(15px);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
 
 }
 
-footer a span{
-    text-decoration: underline;
-}
-footer a span:hover{
-    color: var(--bg-main);
-}
-
-
-
-@media (min-width: 700px){
+@media (min-width: 700px) and (min-height: 700px){
     header {
         height: 15rem;
     }
-     main{
-        margin: 4rem auto;
-    }
+
     
-    .bgColor{
-        width: 50%;
-        justify-content: space-between;
+    .mode{
+        height: clamp;
     }
 
     .circle {
@@ -305,7 +411,26 @@ footer a span:hover{
 
 }
 
-@media (min-width: 1000px){
+@media (min-height: 1000px) and (min-height: 1000px){
+    .introduction{
+        height: clamp(45rem, 60%, 60rem);
+        width: clamp(30rem, 80%, 90rem);
+        line-height: 1.3em;
+    }
+
+    .introduction h2{
+        font-size: 1.7em;
+        line-height: 1.3em;
+    }
+    .introduction p{
+        font-size: 1.2em;
+        line-height: 1.3em;
+    }
+
+    main{
+        margin: 2rem auto 4rem;
+    }
+
     .gameWithThreeCircles{
         gap: 5rem;
     }
@@ -315,7 +440,7 @@ footer a span:hover{
         width: 20rem;
     }
 }
-
+  
 .hide{
     display: none;
 }
