--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     font-size: 1.6rem;
     height: 100vh;
     background: var(--bg-primary);
-    overflow: auto;
+    overflow-y: hidden;
     position: relative;
 }
 
