--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ header h1 {
     text-align: center;
     border-radius: 6px;
 
-    height: clamp(45rem, 60%, 40rem);
-    width: clamp(30rem, 80%, 80rem);
+    height: clamp(45rem, 60%, 50rem);
+    width: clamp(30rem, 80%, 90rem);
 
     position: absolute;
     top: 0;
@@ -74,7 +74,7 @@ header h1 {
 }
 
 .introduction h2{
-    font-size: 1.5em;
+    font-size: 1.6em;
 }
 .introduction p{
     font-size: 1em;
@@ -118,6 +118,52 @@ main h2{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.home h1{
+    margin-top: 55px;
+}
+
+#iconCntainer{
+    display: flex;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+#rankIcon{
+    border-radius: 6px;
+    font-size: 25px;
+}
+#containerAllScore{
+    display: flex;
+}
+
+#containerShowScoreRankingOne{
+    width: 50%;
+}
+#containerShowScoreRankingThree{
+    width: 50%;
+}
+
+.rankingOne{
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    font-size: 2rem;
+    line-height: 30px;
+    position: relative;
+}
+.rankingOne h1{
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+.backRankingScreen{
+    font-size: 35px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 
 .mode{
@@ -273,6 +319,7 @@ ion-icon{
     color: var(--icon-color);
     transition: 150ms;
     border-radius: 20px;
+    cursor: pointer;
 }
 
 ion-icon:hover{
@@ -281,7 +328,7 @@ ion-icon:hover{
 
 .back{
     position: absolute;
-    left: 2rem;
+    left: 0;
 }
 
 .colorPalette{
@@ -379,6 +426,9 @@ ion-icon:hover{
         height: 15rem;
     }
 
+    #rankIcon{
+        font-size: 35px;
+    }
     
     .mode{
         height: clamp;
@@ -413,7 +463,7 @@ ion-icon:hover{
 
 }
 
-@media (min-height: 1000px) and (min-height: 1000px){
+@media (min-width: 1000px){
     .introduction{
         height: clamp(45rem, 60%, 60rem);
         width: clamp(30rem, 80%, 90rem);
@@ -421,11 +471,11 @@ ion-icon:hover{
     }
 
     .introduction h2{
-        font-size: 1.7em;
+        font-size: 2em;
         line-height: 1.3em;
     }
     .introduction p{
-        font-size: 1.2em;
+        font-size: 1.3em;
         line-height: 1.3em;
     }
 
