--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1.6rem;
     background: black;
-    overflow-y: hidden;
+    overflow: hidden;
     position: relative;
 }
 
