--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ main {
     justify-self: center;
     height: 50vh;
     width: min(800px, 90vw);
-    margin: 0 auto 10vh;
+    margin: 5vh auto 10vh;
 
     border-radius: 6px;
     background: var(--bg-main);
