--- a/style.css
+++ b/style.css
@@ -344,6 +344,7 @@ ion-icon:hover{
     color:  rgb(0, 183, 255);
     background:  rgb(0, 85, 119);
     cursor: pointer;
+    border-radius: 100%;
 }
 #blue:hover{
     box-shadow: 0px 0px 10px 1px rgba(0, 85, 119, 0.8);
@@ -353,6 +354,7 @@ ion-icon:hover{
     color: rgb(0, 255, 0);
     background: rgb(2, 113, 2);
     cursor: pointer;
+    border-radius: 100%;
 }
 #green:hover{
     box-shadow: 0px 0px 10px 1px rgb(2, 113, 2, 0.8);
@@ -362,6 +364,7 @@ ion-icon:hover{
     color: rgb(255, 76, 76);
     background: rgb(141, 46, 46);
     cursor: pointer;
+    border-radius: 100%;
 }
 #red:hover{
     box-shadow: 0px 0px 10px 1px rgb(141, 46, 46, 0.8);
@@ -371,6 +374,7 @@ ion-icon:hover{
     color: rgb(128, 0, 255);
     background: rgb(72, 1, 142);
     cursor: pointer;
+    border-radius: 100%;
 }
 #purple:hover{
     box-shadow: 0px 0px 10px 1px rgb(72, 1, 142, 0.8);
