--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ ion-icon{
     transition: 100ms;
     border-radius: 20px;
     cursor: pointer;
-    font-size: 10vh;
+    font-size: 8vh;
 }
 
 ion-icon:hover{
@@ -395,12 +395,6 @@ ion-icon:hover{
 
 }
 
-
-@media (max-width: 700px){
-    #icons{
-        justify-content: space-between;
-    }
-}
 @media (min-width: 700px){
 
     .score{
@@ -417,15 +411,29 @@ ion-icon:hover{
     }
  
 }
-@media (max-width: 1000px){
+@media (max-width: 1000px) and (max-height: 500px){
         #container{
             display: grid;
             grid-template-columns: 0.5fr 3fr 0.5fr;
-            grid-template-rows: 10vh 50vh 10vh;
+            grid-template-rows: 10vh 50vh 5vh;
             grid-row-gap: 5vh;
             grid-template-areas: "header header header" "none main none2" "none footer none2";
         }
  
+}
+@media (max-width: 700px){
+    #container{
+        display: grid;
+        grid-template-columns: 0.5fr 3fr 0.5fr;
+        grid-template-rows: 10vh 60vh 5vh;
+        grid-row-gap: 5vh;
+        grid-template-areas: "header header header" "none main none2" "none footer none2";
+        background-color: red;
+    }
+
+    #icons{
+        justify-content: space-between;
+    }
 }
 
 
