--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body p{
     left: 0;
     right: 0;
     bottom: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100svh;
+    width: 100svw;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 1;
 }
@@ -52,7 +52,7 @@ body p{
     text-align: center;
     border-radius: 6px;
 
-    height: 65vh;
+    height: 60svh;
     width: min(80rem, 90vw);
 
     position: absolute;
@@ -80,7 +80,7 @@ body p{
 #container{
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 15vh 70vh 15vh;
+    grid-template-rows: 15svh 70svh 15svh;
     grid-template-areas: "header header header" "none main none2" "none footer none2";
 }
 
@@ -411,24 +411,8 @@ ion-icon:hover{
     }
  
 }
-@media (max-width: 1000px) and (max-height: 500px){
-        #container{
-            display: grid;
-            grid-template-columns: 0.5fr 3fr 0.5fr;
-            grid-template-rows: 8vh 50vh 5vh;
-            grid-row-gap: 5vh;
-            grid-template-areas: "header header header" "none main none2" "none footer none2";
-        }
- 
-}
-@media (max-width: 700px){
-    #container{
-        display: grid;
-        grid-template-columns: 0.5fr 3fr 0.5fr;
-        grid-template-rows: 10vh 55vh 5vh;
-        grid-row-gap: 3vh;
-        grid-template-areas: "header header header" "none main none2" "none footer none2";
-    }
+
+
 
     #icons{
         justify-content: space-between;
