--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body p{
     left: 0;
     right: 0;
     bottom: 0;
-    height: 100svh;
-    width: 100svw;
+    height: 100vh;
+    width: 100vw;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 1;
 }
@@ -52,7 +52,7 @@ body p{
     text-align: center;
     border-radius: 6px;
 
-    height: 60svh;
+    height: 60vh;
     width: min(80rem, 90vw);
 
     position: absolute;
@@ -396,7 +396,12 @@ ion-icon:hover{
 }
 
 @media (min-width: 700px){
-
+    #container{
+        display: grid;
+        grid-template-columns: 0.5fr 3fr 0.5fr;
+        grid-template-rows: 15svh 70svh 15svh;
+        grid-template-areas: "header header header" "none main none2" "none footer none2";
+    }
     .score{
         line-height: 10vh;
     }
