--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ body p{
 #container{
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 15svh 70svh 15svh;
+    grid-template-rows: 15svh 60svh 15svh;
+    grid-row-gap: 5svh ;
     grid-template-areas: "header header header" "none main none2" "none footer none2";
 }
 
@@ -395,6 +396,16 @@ ion-icon:hover{
 
 }
 
+@media (max-width: 700px){
+    #container{
+        display: grid;
+        grid-template-columns: 0.5fr 3fr 0.5fr;
+        grid-template-rows: 15svh 60svh 15svh;
+        grid-row-gap: 5svh ;
+        grid-template-areas: "header header header" "none main none2" "none footer none2";
+    }
+ 
+}
 @media (min-width: 700px){
     .score{
         line-height: 10vh;
@@ -410,6 +421,8 @@ ion-icon:hover{
     }
  
 }
+
+
 
 .hide{
     display: none;
