--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
 
     --button-color: rgba(255, 255, 255, 0);
 
-    --ft-size: 2vh;
-    --ft-circle: 6vh;
+    --ft-size: 2svh;
+    --ft-circle: 6svh;
 }
 
 body {
