--- a/style.css
+++ b/style.css
@@ -120,6 +120,9 @@ main h3{
     color: var(--fc-secondary-dark);
 }
 
+.rankingOne h1{
+    margin-bottom: 5vh;
+}
 .rankingOne{
     width: 100%;
     height: 100%;
